--- a/LibraryPureOOP/LibraryPureOOP.vcxproj.filters
+++ b/LibraryPureOOP/LibraryPureOOP.vcxproj.filters
@@ -47,5 +47,11 @@
     <ClInclude Include="Genre.h">
       <Filter>Infrastructure</Filter>
     </ClInclude>
+    <ClInclude Include="Shelf.h">
+      <Filter>Infrastructure</Filter>
+    </ClInclude>
+    <ClInclude Include="Book.h">
+      <Filter>Infrastructure</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
